Allow the items wrap when the items no longer fit in the container

--- a/style.css
+++ b/style.css
@@ -23,4 +23,6 @@ h1 {
     border: 8px solid black;
     border-radius: 10px;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
 }
